--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,18 +7,23 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: environments/dev
     steps:
     - uses: actions/checkout@v2
-    - name: Change to dev directory
-      run: cd environments/dev
     - name: Configure AWS Credentials
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set default.region us-west-2
+    - name: Terraform Setup
+      uses: hashicorp/terraform-github-actions@master
+      with:
+        tf_actions_version: 0.12.13
     - name: Terraform Init
       run: terraform init
     - name: Terraform Validate
       run: terraform validate
     - name: Terraform Apply
-      run: terraform apply -auto-approve
+      run: terraform apply --auto-approve
