Alterando arquivo CI/CD

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,9 +16,9 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set default.region us-west-2
+      run: aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} && aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} && aws configure set default.region us-east-1"
     - name: Terraform Setup
-      uses: hashicorp/terraform-github-actions@master
+      uses: hashicorp/setup-terraform@v2
       with:
         tf_actions_version: 0.12.13
     - name: Terraform Init
