Alterando arquivo CI/CD terraform destroy

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Terraform Validate
       run: terraform validate
     - name: Terraform Apply
-      run: terraform apply --auto-approve
+      run: terraform destroy --auto-approve
